# mod-task08-shop

./: CMakeLists.txt  README.md
.github/workflows/: release.yml
include/: README.md  statistics.h  task.h
src/: CMakeLists.txt  main.cpp  statistics.cpp  task.cpp
test/: CMakeLists.txt
thread_utils/: CMakeLists.txt
thread_utils/include/: thread_pool.h  thread_utils.h  timer.h
thread_utils/src/: thread_pool.cpp  timer.cpp  worker.cpp
